--- a/themes/grandeVista/header.liquid
+++ b/themes/grandeVista/header.liquid
@@ -1,7 +1,7 @@
 <header class="hero-header">
   <div class="hero-logo">
     <a href="index.html">
-      <img src="{{ assets_path }}/images/logo.svg" alt="logo-icon" />
+      <img src="{{ assets_path }}/logo.svg" alt="logo-icon" />
     </a>
   </div>
 
