--- a/themes/grandeVista/template.liquid
+++ b/themes/grandeVista/template.liquid
@@ -13,7 +13,7 @@
   <header class="hero-header">
   <div class="hero-logo">
     <a href="index.html">
-      <img src="{{ assets_path }}/logo.svg" alt="logo-icon" />
+      <img src="{{ logo.image }}" alt="logo-icon" />
     </a>
   </div>
 
