suriya||trust sec

--- a/themes/grandeVista/template.liquid
+++ b/themes/grandeVista/template.liquid
@@ -133,8 +133,8 @@
         <div class="top-property-features">
           {% for feature in property.features %}
           <div class="top-property-feature">
-            <img src="{{ feature.icon }}" alt="feature-icon" />
-            <span>{{ feature.label }}</span>
+            <img src="{{ feature }}" alt="feature" />
+            <span>{{ feature }}</span>
           </div>
           {% endfor %}
         </div>
