--- a/themes/grandeVista/template.liquid
+++ b/themes/grandeVista/template.liquid
@@ -133,7 +133,7 @@
         <div class="top-property-features">
           {% for feature in property.features %}
           <div class="top-property-feature">
-            <img src="{{ feature.svg }}" alt="feature-icon" />
+            <img src="{{ assetsUrl }}/feature.svg" alt="feature-icon" />
             <span>{{ feature.title }}</span>
           </div>
           {% endfor %}
