--- a/themes/grandeVista/template.liquid
+++ b/themes/grandeVista/template.liquid
@@ -141,7 +141,7 @@
         <div class="top-property-footer">
           <div class="top-property-price">
             <span>Price</span>
-            <img src="{{ assetsUrl }}/rupee.svg " alt="rupee-icon" />
+            <img src="{{ assetsUrl }}rupee.svg" alt="rupee-icon" />
             <span class="top-property-price-amount">{{ property.price }}</span>
           </div>
           <a href="#" class="top-property-view-button">View Properties</a>
