--- a/themes/grandeVista/template.liquid
+++ b/themes/grandeVista/template.liquid
@@ -134,7 +134,7 @@
           {% for feature in property.features %}
           <div class="top-property-feature">
             <img src="{{ assetsUrl }}feature.svg" alt="feature-icon" />
-            <span>{{ feature.title }}</span>
+            <span>{{ feature.title }}{{feature.svg}}</span>
           </div>
           {% endfor %}
         </div>
