suriya||footer links

--- a/themes/grandeVista/template.liquid
+++ b/themes/grandeVista/template.liquid
@@ -210,13 +210,13 @@
             <div class="footer-contact-info">
               <div class="footer-contact-item">
                 <span class="footer-phone-icon">
-                  <img src="{{ assetsUrl }}{{phone.svg}}" alt="phone-icon" />
+                  <img src="{{ assetsUrl }}phone.svg" alt="phone-icon" />
                 </span>
                 <span class="footer-contact-text">{{ footer.contact.phone }}</span>
               </div>
               <div class="footer-contact-item">
                 <span class="footer-email-icon">
-                  <img src="{{ assetsUrl }}{{mail.svg}}" alt="mail-icon" />
+                  <img src="{{ assetsUrl }}mail.svg" alt="mail-icon" />
                 </span>
                 <span class="footer-contact-text">{{ footer.contact.email }}</span>
               </div>
