suriya||temp 2 header, banner

--- a/themes/elysianDwellings/template.liquid
+++ b/themes/elysianDwellings/template.liquid
@@ -11,12 +11,12 @@
 
   <body>
 <section class="home-hero-section">
-  <img src="{{ home_hero.background_image }}" alt="Background" class="home-hero-background-image" />
+  <img src="{{ assetsUrl }}{{ home_hero.background_image }}" alt="Background" class="home-hero-background-image" />
 
   <header class="hero-header">
     <div class="home-hero-logo">
       <a href="index.html">
-        <img src="{{ home_hero.logo }}" alt="Logo" />
+        <img src="{{ assetsUrl }}{{ home_hero.logo }}" alt="Logo" />
       </a>
     </div>
 
