suriya||temp 2 about sec

--- a/themes/elysianDwellings/template.liquid
+++ b/themes/elysianDwellings/template.liquid
@@ -111,7 +111,7 @@
       <button class="home-aboutus-button">{{ aboutus.button }}</button>
     </div>
     <div class="home-aboutus-image-wrapper">
-      <img class="home-aboutus-image" src="{{ aboutus.image }}" alt="Luxury Home" />
+      <img class="home-aboutus-image" src="{{assetsUrl}}{{ aboutus.image }}" alt="Luxury Home" />
     </div>
   </div>
 </section>
