suriya||temp 2 stats sec

--- a/themes/elysianDwellings/template.liquid
+++ b/themes/elysianDwellings/template.liquid
@@ -121,14 +121,29 @@
     <div class="home-stats-grid">
       {% for item in stats.items %}
       <div class="home-stats-item">
-        <div class="home-stats-icon">
-          {{ item.icon | raw }}
-        </div>
-        <div class="home-stats-content">
-          <div class="home-stats-number">{{ item.number }}</div>
-          <div class="home-stats-text">{{ item.text }}</div>
-        </div>
-      </div>
+            <div class="home-stats-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="41"
+                height="39"
+                viewBox="0 0 41 39"
+                fill="none"
+              >
+                <path
+                  d="M23.5262 1.76001C21.9652 0.171687 19.5037 0.0920306 17.8282 1.48121C17.7158 1.57388 17.5997 1.65434 17.4951 1.76001L0.625344 18.9259C-0.208915 19.7741 -0.208214 21.1502 0.626044 21.9982C0.729987 22.104 0.843125 22.1974 0.961341 22.277C1.31652 22.516 1.72651 22.6349 2.1365 22.6349C2.54649 22.6349 2.84974 22.5031 3.20492 22.264C3.32304 22.1844 3.36718 22.104 3.47112 21.9982L4.68761 20.5816V30.504C4.68761 34.8779 8.83745 38.5 13.3339 38.5H28.3664C32.7724 38.5 36.0068 34.9525 36.0068 30.504V20.9509L37.212 21.999C37.6283 22.4233 38.2633 22.6356 38.8093 22.6356C39.3553 22.6356 39.946 22.4233 40.3632 21.999C41.1974 21.1508 41.2195 19.7747 40.3852 18.9266L23.5262 1.76001ZM31.7361 30.504C31.7361 32.5566 30.4185 34.1543 28.3664 34.1543H13.3339C11.19 34.1543 8.95847 32.4871 8.95847 30.504V16.236L20.1664 4.8324L31.7361 16.6047V30.504Z"
+                  fill="#F8F8F8"
+                />
+                <path
+                  d="M12.232 21.2979C12.232 21.4602 12.2406 21.6216 12.2562 21.7817C12.2832 22.0671 12.3381 22.3438 12.41 22.6132C12.422 22.6588 12.4313 22.7052 12.4448 22.7508C12.4555 22.7863 12.4676 22.8203 12.479 22.8551C13.8456 27.3087 20.518 30.7909 20.518 30.7909C20.518 30.7909 27.1904 27.308 28.5571 22.8551C28.5685 22.8204 28.5806 22.7863 28.5912 22.7508C28.604 22.7052 28.614 22.6596 28.6261 22.6132C28.698 22.3438 28.7528 22.0671 28.7799 21.7817C28.7955 21.6217 28.804 21.4602 28.804 21.2979C28.804 18.5399 26.6067 16.3033 23.8954 16.3033C22.5857 16.3033 21.3991 16.8284 20.5186 17.6794C19.6381 16.8291 18.4516 16.3033 17.1419 16.3033C14.4301 16.3033 12.232 18.5391 12.232 21.2979Z"
+                  fill="#F8F8F8"
+                />
+              </svg>
+            </div>
+            <div class="home-stats-content">
+              <div class="home-stats-number">{{item.value}}</div>
+              <div class="home-stats-text">{{item.lable}}</div>
+            </div>
+          </div>
       {% endfor %}
     </div>
   </div>
