suriya||temp 2 stats sec

--- a/themes/elysianDwellings/template.liquid
+++ b/themes/elysianDwellings/template.liquid
@@ -141,7 +141,7 @@
             </div>
             <div class="home-stats-content">
               <div class="home-stats-number">{{item.value}}</div>
-              <div class="home-stats-text">{{item.lable}}</div>
+              <div class="home-stats-text">{{item.label}}</div>
             </div>
           </div>
       {% endfor %}
