suriya||temp 2 footer

--- a/themes/elysianDwellings/styles/styles.css
+++ b/themes/elysianDwellings/styles/styles.css
@@ -2500,7 +2500,7 @@ body {
     rgba(23.29, 14.67, 3.81, 0.85) 0%,
     rgba(23.29, 14.67, 3.81, 0.85) 100%
   );
-  background-image: url("../../images/home_stats_bg.png");
+  background-image: url("https://suriyaprakashmurugan.github.io/next-remote-theme/themes/elysianDwellings/assets/home_stats_bg.png");
   background-size: cover;
   background-position: center;
   padding: 100px 0;
