--- a/themes/grandeVista/template.liquid
+++ b/themes/grandeVista/template.liquid
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ title }}</title>
-
+  <link rel="icon" href="{{ logo.image }}" type="image/x-icon" />
     <link rel="stylesheet" href="{{ css_url }}" />
     <link href="{{ google_fonts }}" rel="stylesheet" />
   </head>
