suriya||json structure

--- a/themes/elysianDwellings/template.liquid
+++ b/themes/elysianDwellings/template.liquid
@@ -33,7 +33,7 @@
     </nav>
 
     <div class="hero-contact">
-      <a href="{{ home_hero.contact_link }}" class="hero-contact-btn">Contact Us</a>
+      <a href="{{ home_hero.contact_link }}" class="hero-contact-btn">{{ contact.text }}</a>
     </div>
 
     <div class="hero-mobile-menu">
