--- a/themes/grandeVista/template.liquid
+++ b/themes/grandeVista/template.liquid
@@ -50,11 +50,11 @@
     <div class="hero-overlay"></div>
   </div>
   <div class="hero-content">
-    <h1 class="hero-title">{{ hero.title }}</h1>
-    <p class="hero-description">{{ hero.description }}</p>
-    <a href="#" class="hero-explore-button">{{ hero.button_text }}</a>
+    <h1 class="hero-title">{{ home_hero.title }}</h1>
+    <p class="hero-description">{{ home_hero.description }}</p>
+    <a href="#" class="hero-explore-button">{{ home_hero.button_text }}</a>
     <div class="hero-search">
-      {% for filter in hero.search_filters %}
+      {% for filter in home_hero.search_filters %}
       <div class="hero-search-option">
         <span class="hero-search-label">{{ filter }}</span>
         <svg class="hero-search-arrow" width="12" height="6" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
