suriya||json structure

--- a/themes/grandeVista/template.liquid
+++ b/themes/grandeVista/template.liquid
@@ -46,7 +46,7 @@
 
 <section class="hero">
   <div class="hero-background">
-    <img src="{{ home_hero.background_image }}" alt="Luxury Home" class="hero-img" />
+    <img src="{{ assetsUrl }}{{ home_hero.background_image }}" alt="Luxury Home" class="hero-img" />
     <div class="hero-overlay"></div>
   </div>
   <div class="hero-content">
